# vim: set noexpandtab:

2012-06-25 Steve
	* Added missing trigger: mu18_tight_mu8_EFFS
	* Tagging SusyNtuple-00-00-08

2012-06-24 Steve
	* Added single lepton triggers from our corresponding dilepton triggers.
	  This way we have more flexibility to implement the best logic later
	* Added event trigger flags to Event class
	* Tagging SusyNtuple-00-00-07

2012-06-23 Steve
	* Tagging SusyNtuple-00-00-06

2012-06-22 Steve
	* Added sv0 and mv1 btaggers
	* Added more 2012 triggers
	* Added pileup weight for 2012 A-B5

2012-06-21 Matt
	* Added Photon class to SusyNt

2012-06-20 Steve
	* Updated to twentyinvfb version of MultiLep, and SUSYTools v71
	* Added preliminary 2012 triggers: 
		* EF_e24vhi_medium1
		* EF_2e12Tvh_loose1
		* EF_mu24i_tight
		* EF_2mu13
		* EF_e12Tvh_medium1_mu8
	* Tagging SusyNtuple-00-00-05
		* First tag for 2012 data/mc

2012-06-19 Steve
	* Fixed event timer calculation
	* Added helper script for tagging package: scripts/makeTags.sh
	* Tagging SusyNtuple-00-00-04
		* Last tag for 2011 data/mc

2012-06-18 Steve
	* Added pdfSF weight to Event class, for reweighting 7TeV -> 8TeV
	* Tagging SusyNtuple-00-00-03

2012-06-17 Steve
	* Added TStopwatch for checking processing time

2012-06-11 Steve
	* Updating syntax and conventions for code consistency:
		* SYSTEMATIC -> SusyNtSys
		* NOM -> NtSys_NOM
		* etc.
	* Removed 'using namespace' statements from headers (grr)
	* Tagging SusyNtuple-00-00-02

2012-06-01 Matt
	* Made cutflow dump all results from three channels
	* Moved getDiLepEvtType(Leptons) to SusyDefs so can be used outside trigger class
	* Note: If you want to inherit methods from Susy2LepCutflow, maybe need to
	  modify the way evt counts are stored. Not pressing right now, but maybe update in
	  the future.
	* The above has been fixed. You can now inherit from CF. If you don't specify event
	  type it will just save everything under unknown and code shouldn't crash.

2012-05-31 Matt
	* Tagging SusyNtuple-00-00-01

2012-05-30 Matt